K8S/postgres/base/deploy.yml
apiVersion: "apps/v1"
kind: "StatefulSet"
metadata:
  name: "postgres"
  namespace: "testing"
spec:
  serviceName: "postgres"
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "postgres"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "postgres"
      annotations:
        promtail.io/collect: "true"
    spec:
      serviceAccount: "postgres"
      securityContext:
        readOnlyRootFilesystem: true
        allowPrivilegeEscalation: false
      volumes:
        - name: "tmp"
          emptyDir: {}
      containers:
        - name: "psql"
          image: "bitnami/postgresql:latest"
          imagePullPolicy: "IfNotPresent"
          volumeMounts:
            - name: "tmp"
              mountPath: "/tmp"
            - name: "postgres-data"
              mountPath: "/bitnami/postgresql"
          ports:
            - containerPort: 5432
              protocol: "TCP"
              name: "client"
          resources:
            requests:
              cpu: "100m"
              memory: "512Mi"
            limits:
              cpu: "100m"
              memory: "1024Mi"
  volumeClaimTemplates:
    - metadata:
        name: "postgres-data"
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "local-path"
        resources:
          requests:
            storage: "6Gi"
