K8S/postgres/base/service.yml
apiVersion: "v1"
kind: "Service"
metadata:
  namespace: "testing"
  name: "postgres"
spec:
  # type: "LoadBalancer"
  selector:
    app.kubernetes.io/name: "postgres"
  ports:
    - name: "client"
      port: 5432
      protocol: "TCP"
      targetPort: "client"
